Fix toolbar overlap with timeline

--- a/src/widgets/issuedepyt-graph/app.css
+++ b/src/widgets/issuedepyt-graph/app.css
@@ -9,8 +9,24 @@
   margin-left: calc(var(--ring-unit));
 }
 
+.extra-margin-right {
+  margin-right: calc(var(--ring-unit));
+}
+
 .settings {
   margin: calc(var(--ring-unit) / 2);
+}
+
+div.dep-toolbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  justify-content: left;
+  width: 100%;
+}
+
+span.dep-toolbar-right {
+  margin-left: auto;
 }
 
 div.vertical-size-control-bar {
